Industry table spacing fix

--- a/src/app/components/candidate-card-expanded/candidate-card-expanded.component.scss
+++ b/src/app/components/candidate-card-expanded/candidate-card-expanded.component.scss
@@ -108,6 +108,7 @@
         .mat-cell {
             font-size: 13px;
             color: $vvgrey;
+            padding:8px;
         }
 
         .mat-cell:last-child {
